v1 - заменил названия в схеме api
